# concurrency

./: CMakeLists.txt  concurrency.vcxproj  readme.md
docs/: 01_concepts.md  02_quick_start.md  03_with_stdexec.md  04_task_anatomy.md  05_components.md  06_combiner.md  07_custom_task.md  README.md
example/: core.cpp  hello_execution.cpp  hello_world.cpp  priority.h  run_loop.cpp  scheduler.cpp  scope.cpp  static_thread_pool.cpp  stop_token.cpp  time_pool.cpp  timer.cpp
example/benchmark/: fibonacci.cpp
example/tool/: erased_task.h  heavy_cpu.h  set_thread_priority.h  static_thread_pool.h  timer.h
example/type_erase/: erased_task.h  invoke.cpp  type_erase_impl.cpp
include/nagisa/concurrency/: _spawn.h  any_scheduler.h  concurrency.h  coroutine.h  environment.h  simple_task.h  spawn.h
include/nagisa/concurrency/_coroutine/: awaitable.h  awaitable_trait.h  awaiter.h  coroutine_handle.h  current_handle.h  environment.h  macro_pop.h  macro_push.h  noop_promise.h  promise.h  scope_guard.h  simple_task.h  spawn.h  task.h
include/nagisa/concurrency/_coroutine/awaitable/: condition_variable.h  current_handle.h  env.h  environment.h  forward.h  from_handle.h  sync_invoke.h
include/nagisa/concurrency/_coroutine/component/: continuation.h  custom.h  exception.h  exit.h  intro.h  return_object.h  schedulable.h  stop_token.h  value.h  with_awaitable.h  with_scheduler.h  workflow.h
